--- a/QuantumSimAsRecursion.tex
+++ b/QuantumSimAsRecursion.tex
@@ -139,7 +139,7 @@
 %% The title of the paper goes here.  Edit to your title.
 %%
 
-\title{Efficient Quantum Simulation Using a Recursion}
+\title{Quantum Simulation Using a Recursion}
 
 %%
 %% Now edit the following to give your name and address:
