--- a/SubsetSumUsingSinusoids.tex
+++ b/SubsetSumUsingSinusoids.tex
@@ -238,7 +238,7 @@ The first product-term represents the fact that at least one choice $a_k$ from s
 \varphi  =  \left \langle \Psi (n), e^{  \frac{2\pi i T}{L} n }\right \rangle  
 \end{equation}
 
-If the inner product is zero (or effectively zero relative to the working precision of the computation), then there is no solution. If the inner product is non-zero, then a solution exists. This inner product can be thought of as an oracle function--a function which provides guidance on how to reduce the search space for finding a solution by indicating when a solution is present. There are many variations on how a solution can be found but they would have the same general structure for iterating. Compute the oracle function $\varphi  =  \left \langle \Psi, \Phi _T\right \rangle $. Then iteratively restrict the search space and recompute the oracle function until a solution is found. This is described in more detail in the following section.
+If the inner product is zero (or effectively zero relative to the working precision of the computation), then there is no solution. If the inner product is non-zero, then a solution exists. This inner product can be thought of as an oracle function--a function which provides guidance on how to reduce the search space for finding a solution by indicating when a solution is present. There are many variations on how a solution can be found but they would have the same general structure for iterating. Compute the oracle function $\varphi  =  \left \langle \Psi, \Phi _T\right \rangle $ and then iteratively restrict the search space and recompute the oracle function until a solution is found. This is described in more detail in the following section.
 
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
