--- a/BooleanSATUsingDiscreteSeqences.tex
+++ b/BooleanSATUsingDiscreteSeqences.tex
@@ -174,7 +174,7 @@
 %%%
 
 \begin{abstract}
-A novel method for SAT-solving is presented which uses sets of orthogonal and non-orthogonal binary sequences to encode Boolean variables. SAT statements are encoded into arithmetic operations on sequences--each logic variable is encoded into waveforms which are multiplied (AND-ed) together to encode a the logic statement in conjunctive normal form (CNF).  The binary sequences are designed to detect when logic conflict conditions occur for each variable and force the output to zero for each term where this occurs by utilizing orthogonality. Satisfiability can be determined based on whether the output sequence is non-zero (SAT) or zero (UNSAT) over all samples. Encoding the logic statement into a discrete waveform eliminates the need for an explicit expansion of the statement while still producing a discernible result. The SAT solutions can be found in polynomial time complexity using this method.
+A novel method for SAT-solving is presented which uses sets of orthogonal and non-orthogonal binary sequences to encode Boolean variables. SAT statements are encoded into arithmetic operations on sequences--each logic variable is encoded into waveforms which are multiplied (AND-ed) together to encode a the logic statement in conjunctive normal form (CNF).  The binary sequences are designed to detect when logic conflict conditions occur for each variable and force the output to zero for each term where this occurs by utilizing orthogonality. Satisfiability can be determined based on whether the output sequence is non-zero (SAT) or zero (UNSAT) over all samples. Encoding the logic statement into a discrete waveform eliminates the need for an explicit expansion of the statement while still producing a discernible result. The SAT solutions can be found in a polynomial number of vector operations using this method.
 
 \end{abstract}
 
@@ -281,7 +281,7 @@ in the output sequence.
 \section{Summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \noindent
-A method for SAT-solving was presented utilizing discrete sequences to detect logic conflicts in an encoded form of a SAT problem in conjunctive normal form. This formulation relies on the associative and distributive properties of the Hadamard product and allows for polynomial time complexity since the solution can be computed without expanding the logic statement. The memory requirements do not scale as well due to the requirement that all sequences must have mutual overlap except for the sequence encoding a variable and its complement (which must be orthogonal), and this requires the use of long sequences to maintain overlap for products of many variables. Future work may include relaxing the element-wise orthogonality constraint and move toward general orthogonality to improve memory scaleability.
+A method for SAT-solving was presented utilizing discrete sequences to detect logic conflicts in an encoded form of a SAT problem in conjunctive normal form. This formulation relies on the associative and distributive properties of the Hadamard product and requires a polynomial number of vector operations since the solution can be computed without expanding the logic statement. The memory requirements do not scale as well due to the requirement that all sequences must have mutual overlap except for the sequence encoding a variable and its complement (which must be orthogonal), and this requires the use of long sequences to maintain overlap for products of many variables. Future work may include relaxing the element-wise orthogonality constraint and exploring alternative encodings of logic variables.
 
 
 
