--- a/BooleanSATUsingDiscreteSeqences.tex
+++ b/BooleanSATUsingDiscreteSeqences.tex
@@ -139,7 +139,7 @@
 %% The title of the paper goes here.  Edit to your title.
 %%
 
-\title{Efficient Boolean Satisfiability Using A Modified Noise-Based Logic Approach }
+\title{Boolean Satisfiability Using A Modified Noise-Based Logic Approach }
 
 %%
 %% Now edit the following to give your name and address:
